<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:color="#5C4848" android:state_checked="true"
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/map"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/lollipop"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/registerFragment"
            android:icon="@drawable/edit"
            android:title="@string/register" />
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/user"
            android:title="@string/login" />
        <item
            android:id="@+id/infoFragment"
            android:icon="@drawable/info"
            android:title="@string/hello_blank_fragment" />
    </group>

</menu>

