<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.unicauca.appsmoviles.dulces_popayan_java2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="edu.unicauca.appsmoviles.dulces_popayan_java2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.unicauca.appsmoviles.dulces_popayan_java2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/infoFragment"
        android:name="edu.unicauca.appsmoviles.dulces_popayan_java2.infoFragment"
        android:label="@string/hello_blank_fragment"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="edu.unicauca.appsmoviles.dulces_popayan_java2.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="edu.unicauca.appsmoviles.dulces_popayan_java2.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
</navigation>